syntax = "proto3";

package auth.v1;

option go_package = "backend/proto/auth;authpb";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// Authentication Service
service AuthService {
  // Register a new user
  rpc Register(RegisterRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/v1/auth/register"
      body: "*"
    };
  }

  // Login
  rpc Login(LoginRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }

  // Logout
  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/v1/auth/logout"
    };
  }

  // Get current user info
  rpc GetMe(GetMeRequest) returns (User) {
    option (google.api.http) = {
      get: "/v1/auth/me"
    };
  }

  // Refresh token
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/v1/auth/refresh"
      body: "*"
    };
  }

  // Validate token
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
}

message GetMeRequest {
  string token = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
}

message User {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  string avatar = 4;
  string status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message AuthResponse {
  string token = 1;
  string refresh_token = 2;
  User user = 3;
  google.protobuf.Timestamp expires_at = 4;
}
